public/assets/css/lareponse.css
/* ... */
.card-search {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    gap: 1rem;
    padding: 1rem;
    margin-bottom: 2rem;
}

.card-search .card-description {
    grid-column: span 2;
    text-align: left;
}

.card-search img {
    object-fit: cover;
    object-position: center center;
    width: 13rem;
    height: 13rem;
    border-radius: 50%;
    grid-row: span 2;

}

@media screen and (min-width: 576px) {
    .card-search {
        display: grid;
        grid-template-columns: min-content 1fr min-content;
        grid-template-rows: min-content auto;
        align-items: center;
        justify-content: start;
        height: 13rem;
        gap: 2rem;
        padding: 0 1rem 0 0;
    }

    .card-search .card-meta {
        white-space: nowrap;
        color: var(--primary);
    }

    .card-search img {
        object-fit: cover;
        object-position: center center;
        width: 13rem;
        height: 13rem;
        border-radius: 1rem 0rem 0rem 1rem;
        grid-row: span 2;

    }

    .card-search .card-heading {
        margin: 0;
        padding: 0;
        text-transform: uppercase;
        text-align: left;
    }

    .card-search .card-description {
        grid-column: span 2;
        height: 100%;
        overflow: hidden;
        margin-bottom: 2rem;
    }
}


.modal-body label,
.modal-body legend {
    font-weight: 500;
}

#modalter_prorg fieldset {
    display: grid;
}

#modalter_prorg fieldset label {
    white-space: nowrap;
    text-transform: uppercase;
    color: var(--bs-primary);
    font-weight: bold;
    margin-top: 1.5rem;
}

fieldset label:has(+[required])::after {
    content: " *";
    color: var(--bs-primary);
}

@media (min-width: 768px) {
    #modalter_prorg fieldset {
        display: grid;
        gap: 1rem 2rem;
        grid-template-columns: 4fr 10fr 1fr;
        align-items: center;
        margin-bottom: 0.5rem;
    }

    #modalter_prorg fieldset label {
        text-align: right;
        margin-top: initial;
    }
}


@media (min-width: 1200px) {
    #recherche-professionnels section.search-results {
        display: grid;
        grid-template-columns: 1fr 1fr;
        gap: 1rem;

    }
}

.catalog {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
    gap: 2rem;
}

#professionals.catalog>*:first-child {
    grid-row: span 2;
}

#filmotheque.catalog>*:first-child {
    grid-row: span 2;
}


.filmographie .filmotheque .film-item img {
    height: 211px;
    object-fit: cover;
}

#pro-filmography p {
    line-height: 1;
}

.long-text-container {
    position: relative;
    padding-bottom: 1rem;
}

.long-text-content::after {
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 1em;
    background: inherit;
    /* Inherit the background to blend in */
    backdrop-filter: blur(5px);
    /* Apply the blur effect */
    pointer-events: none;
    /* Ensure the pseudo-element doesn't interfere with interactions */
}

.long-text-content.folded {
    max-height: 20em;
    overflow: hidden;
    transition: max-height 0.3s ease;
}

.long-text-content.expanded {
    max-height: none;
}

.toggle-button {
    display: block;
    margin-top: 1em;
    cursor: pointer;
}

/* Style for the label which will contain the checkbox */
.secret-checkbox {
    width: 1.5rem;
    height: 1.5rem;
    display: block;
    position: relative;
    padding-left: 35px;
    cursor: pointer;
    font-size: 22px;
    user-select: none;
}

/* Hide the default checkbox */
.secret-checkbox input {
    position: absolute;
    opacity: 0;
    cursor: pointer;
}

/* Create a custom checkbox */
.secret-checkbox .checkmark {
    position: absolute;
    top: 0;
    left: 0;
    height: 1rem;
    width: 1rem;
    background-color: #FFF;
    background-image: url('/public/assets/img/incognito.svg');
    background-repeat: no-repeat background-position:center;
    border-radius: 50%;

    /* Border for the box */
}


/* When the checkbox is checked, add a blue background */
.secret-checkbox input:checked~.checkmark {
    background-color: var(--primary);
}


body>footer {
    padding: 1rem;
    background: var(--bs-black);
    color: var(--bs-white);

    display: grid;
    grid-template-columns: 1fr;
    gap: 2rem 1rem;
}

@media screen and (min-width: 768px) {
    body>footer {
        grid-template-columns: 1fr 1fr;
    }

    body>footer #copyright {
        grid-column: span 2;
    }
}

body>footer .partenaire-item {
    /* border-radius: 1rem; */
    /* background: var(--bs-white); */

    display: flex;
    align-items: center;
    justify-content: center;
    width: 7rem;
    height: 7rem;
}

body>footer .partenaire-item img {
    object-fit: contain;
    max-height: 77px;
    border-radius: 1rem;
}

#branding {
    text-align: center;
}

body>footer #branding img {
    max-width: 17rem;
}

body>footer .bi {
    color: var(--bs-white);
    font-size: 1.5rem;
    margin: 0 0.5rem;
}

body>footer #sitemap {
    display: flex;
    gap: 3rem;
}

body>footer #sitemap ul {
    list-style: none;
    padding-left: 0;
}

body>footer #sitemap li a {
    text-transform: uppercase;
    color: var(--bs-white);
    white-space: pre;
}

body>footer #sitemap a:hover {
    color: var(--bs-primary);
}

body>footer #partenaires nav {
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
}

body>footer #copyright {
    text-align: center;
    font-size: 0.9em;
    padding: 1rem;
}

#modal_job fieldset>legend,
#modal_job fieldset>label {
    color: var(--bs-primary);
    font-size: 1rem;
}

#modal_job fieldset div {
    display: grid;
    grid-template-columns: min-content auto;
    gap: 0.5rem 1rem;
}

@media screen and (min-width: 768px) {
    #modal_job .checkboxes-fields {
        display: flex;
        flex-wrap: wrap;
        gap: 4rem;
    }
}


#modal_job fieldset {
    margin-top: 2rem;
}
/* ... */

